# GScript.GaniEditor

./: .gitignore  README.md  anieditor.js  changelog.gani.json  changelog.json  changelog.level.json  example-theme.css  index.html  package-lock.json  package.json  server.js
.github/workflows/: build.yml
css/: global.css
ganis/: index.json
js/: anieditor.js  beautifytool.js  build-web.js  gmapgenerator.js  leveleditor.js  mnglib.js  setshape2editor.js  tabmanager.js
levels/: index.json
objects/: index.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
