[package]
name = "GSuite"
version = "0.1.44"
description = "Open-source Graal editor suite for levels, animations, and maps"
authors = ["Denveous"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ganieditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
